--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ body {
     margin: 10px; 
     display: inline-block; 
 }
+#login-button{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+}
 img { 
     max-width: 100px; 
 }
