--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
     position: absolute;
     top: 5%;
     right: 5%;
+    padding: 10px 20px;
+    background-color: #4CAF59;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 10px;
+    transition: background-color 0.3s;
+}
+#login-button.hover {
+    background-color: #45A049;
 }
 img { 
     max-width: 100px; 
