--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
     font-size: 10px;
     transition: background-color 0.3s;
 }
-#login-button.hover {
-    background-color: #45A049;
+#login-button:hover {
+    background-color: #45A049
 }
 img { 
     max-width: 100px; 
