fixing missing semicolon in style.css

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     font-size: 10px;
 }
 #login-button:hover {
-    background-color: #45A049
+    background-color: #45A049;
 }
 img { 
     max-width: 100px; 
