--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body,html { 
     font-family: Arial, sans-serif; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
 }
-.container{
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    height: 100%;
+.site-button{
+    background-color:mistyrose;
+    border: none;
+    border-radius: 5px;
+    font-size: 10px;
+    transition: background-color 0.5s;
+}
+.site-button:hover{
+    background-color:pink;
 }
 .stamp { 
     border: 1px solid #ddd; 
@@ -16,27 +17,19 @@ body,html {
     margin: 10px; 
     display: inline-block; 
 }
-form { 
-    background-color: #f9f9f9; 
-    padding: 20px; 
-    border-radius: 5px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-}
-#login-button{
+.login-button{
     position: absolute;
     top: 5%;
     right: 5%;
     padding: 10px 20px;
-    background-color: #4CAF59;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    font-size: 10px;
-    transition: background-color 0.3s;
 }
-#login-button:hover {
-    background-color: #45A049;
-}
+
 img { 
     max-width: 100px; 
+}
+#login-form{
+    left      : 50%;
+    top       : 50%;
+    position  : absolute;
+    transform : translate(-50%, -50%);
 }
