--- a/style.css
+++ b/style.css
@@ -1,35 +1,66 @@
-body,html { 
-    font-family: Arial, sans-serif; 
+body{ 
+    font-family: "Times New Roman", sans-serif;
+    background-color: #FAF6E3;
+    color: #2A3663;
+}
+.hidden{
+    display: none;
 }
 .site-button{
-    background-color:mistyrose;
+    background-color:#D8DBBD;
     border: none;
     border-radius: 5px;
     font-size: 10px;
     transition: background-color 0.5s;
+    font-weight: 200;
+    padding: 10px 20px;
 }
 .site-button:hover{
-    background-color:pink;
+    background-color:#B59F78;
+    color: #FAF6E3;
+    font-weight: bolder;
 }
 .stamp { 
-    border: 1px solid #ddd; 
+    border: 1px solid #D8DBBD; 
     padding: 10px; 
     margin: 10px; 
     display: inline-block; 
 }
-.login-button{
+#manage{
     position: absolute;
     top: 5%;
     right: 5%;
-    padding: 10px 20px;
 }
 
 img { 
     max-width: 100px; 
 }
-#login-form{
+form{
+    display: none;
     left      : 50%;
     top       : 50%;
     position  : absolute;
     transform : translate(-50%, -50%);
+}
+input:not([type='file']):not([type='submit']), select{
+    border:none;
+    color: #2A3663;
+    background-color: #D8DBBD;
+
+}
+input[type='file']{
+    color: #2A3663;
+    border: none;
+    font-family:"Times New Roman";
+}
+textarea{
+    vertical-align: top;
+    color: #2A3663;
+    background-color: #D8DBBD;
+    border:none;
+}
+input[type='submit']{
+    color: #FAF6E3;
+    border: none;
+    background-color: #B59F78;
 }
