1. changed by flask file structure 2. add form finally completed and working

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Digital Stamp Book</title>
-    <link rel='stylesheet' href = 'style.css'>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <button class="site-button" id="manage" onclick="window.location.href='manage.html'">Manage</button>
+    <a href="/manage"><button class="site-button" id="manage">Manage</button></a>
 </body>
 </html>
 
